Removed article count, fixed formatting of categories on main page and display of help articles on narrow displays. Cleaned up CSS code generally.

--- a/ce-support.css
+++ b/ce-support.css
@@ -28,6 +28,8 @@
     font-weight: 500;
 }
 
+/* ------------------------------------- General styling  ------------------------------------------- */
+
 /* Foundation */
 body,
 input,
@@ -121,6 +123,7 @@ a.btn {
 }
 #docsSearch h1{
     text-shadow: 2px 2px 2px #3b3b3b; 
+    line-height: 1.2;
     padding-top: 36px;
 }
 
@@ -149,142 +152,21 @@ a.btn {
     margin: 1em 1em 1em 1em;
 }
 
-@media (min-width: 769px) {
-    .navbar .nav {
-        position: absolute; 
-        left: auto; 
-        bottom: 0; 
-        margin-right: 0; 
-} 
-
-/* Next two sections control styling of logo */
-.navbar .brand img {
-    border: none;
-    max-width: 400px;
-    margin: -1px;
-    overflow: hidden;
-    padding: 0;
-    position: absolute;
-    width: auto;
-}
-    
-#mainNav .brand span {
-	display: inline-block;
-	text-indent: -9000px;
-	width: 381px;
-	height: 75px;
-	background: url(https://ericrjensen.github.io/CE-Support/logo.png) no-repeat 0 0;
-	background-size: 100%;
-}    
-
-.navbar .brand {
-    height: 32px;
-    width: 326px;
-    margin: 15px 0;
-    padding: 0;
-    background-size: 100%;
-    background-repeat: no-repeat;
-}
-
-#searchBar .search-query {
-    border-radius: 3px;
-    font-size: 16px;
-    line-height: 1;
-    width: 100%;
-    height: 40px;
-    color: #3e4245;
-    border: 0;
-}
-
-#searchBar .search-query::placeholder {
-    color: #DADEE1;
-}
-
-#searchBar .search-query:focus {
-    box-shadow: 0 0 0 2px #519bf7;
-}
-
-#searchBar button {
-    color: #fff;
-    text-shadow: none;
-    background: #519bf7;
-    border-radius: 0 3px 3px 0;
-    border: 0;
-    font-size: 16px;
-    padding: 0.7em 1.5em;
-    height: 40px;
-    right: 0;
-}
-
-#searchBar button:hover {
-    background: #1769e6;
-}
-
-#searchBar button .icon-search {
-    display: inline;
-    padding-right: 10px;
-    font-size: 16px;
-    color: #fff;
-}
-
-#serp-dd {
-    top: 65px;
-    border: 1px solid #EDEDED;
-    box-shadow: 0 5px 3px rgba(0, 0, 0, .08);
-    border-radius: 3px;
-}
-
-#serp-dd .result>li {
-    padding: 5px;
-}
-
-/* Home collections */
-
-.twoCol h2 a,
-.threeCol h2 a {
-    font-size: 18px;
-    color: #3e4245;
-    display: inline-block;
-    border-bottom: 0;
-}
-
-.twoCol .popArticles,
-.threeCol .popArticles,
-.most-pop-articles .popArticles {
-    font-size: 15px;
-    list-style: none;
-    margin: 0;
-    text-align: center;
-}
-
-.icon-article-doc:before {
-    content: "";
-    display: none;
-}
-
-.twoCol .popArticles a,
-.threeCol .popArticles a,
-.most-pop-articles .popArticles a {
-    margin-left: 0;
-}
-
-.threeCol .collection {
+.category-list .category {
+    flex: 0 0 32%;
+    margin: 0 10px 20px -1px;
+    padding: 0 0 15px;
+    width: 30%;
     border: 1px solid #EDEDED;
     border-radius: 3px;
-    box-shadow: 0 5px 10px rgba(0, 0, 0, .04);
+    box-shadow: none;
+    background: #fff;
+    max-height: 230px;
 }
 
-.threeCol .collection .collection-body {
-    padding: 0 20px 20px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    height: 220px;
-    max-height: 220px;
-}
-
-.threeCol .collection .collection-body ul {
-    overflow: hidden;
+.category-list .category .article-count {
+    margin-top: 0;
+    font-size: 0px;
 }
 
 #docsSearch h1 {
@@ -382,35 +264,8 @@ a.btn {
     align-content: flex-start;
 }
 
-.category-list {
-    text-align: center !important;
-    margin: 1em 1em 1em 1em;
-}
 
-.category-list .category {
-    flex: 0 0 32%;
-    margin: 0 10px 20px -1px;
-    padding: 0 0 15px;
-    width: 30%;
-    border: 1px solid #EDEDED;
-    border-radius: 3px;
-    box-shadow: none;
-    background: #fff;
-}
 
-@media screen and (max-width: 500px) {
-    .category-list .category {
-        flex: 1 1 100%;
-        width: 100%;
-        text-align: center;
-    }
-}
-@media (max-width: 480px) and (max-width: 768px) {
-	.category-list {
-        text-align: center;
-        width: 100%;
-	}
-}
 .category-list .category:hover {
     background-color: #fff;
     box-shadow: 0 5px 10px rgba(0, 0, 0, 0.171);
@@ -434,13 +289,9 @@ a.btn {
     display: block;
     height: 120px;
     width: inherit;
-    margin: 0 0 20px;
+    margin: 29px 0 20px;
     background: #EDEDED;
     border-radius: 3px 3px 0 0;
-}
-
-.category-list .category .article-count {
-    margin-top: 0;
 }
 
 /* Article page */
@@ -452,13 +303,11 @@ a.btn {
 .contentWrapper {
     border: 0;
     padding: 40px;
-    width:800px;
 }
 
 #sidebar {
     position: sticky;
     top: 32px;
-    width: 250px;
 }
 
 #sidebar form .search-query {
@@ -487,6 +336,7 @@ a.btn {
     line-height: 24px;
     margin-left: 0;
 }
+
 
 #sidebar .nav-list .active a,
 #sidebar .nav-list .active a:hover,
@@ -550,7 +400,6 @@ a.btn {
     margin: 20px 0;
     padding: 0;
     border-radius: 0px;
-    border: 1px solid #EDEDED;
 }
 
 .articleFoot p,
@@ -572,8 +421,6 @@ a.btn {
     border-bottom-color: #9EA1A3;
 }
 
-    
-    
 /*For multi-tabbed tables */
 .tabs {
     position: relative;   
@@ -617,7 +464,7 @@ a.btn {
 
 /*Callout text
 https://codepen.io/superjaberwocky/pen/AXdEWj*/
-.callout {
+/* .callout {
     padding: 20px;
     margin: 20px 0;
     border: 1px solid #eee;
@@ -647,11 +494,11 @@ code {
         color: $color;
     }
 }
-}
+} */
 
 /* Articles list */
 #categoryHead h1 {
-    margin-top: 0;
+    margin-top: 40px;
     margin-bottom: 40px;
 }
 
@@ -671,8 +518,6 @@ code {
 }
 
 
-
-
 .center::after {
     font-size: 0.9em;
     position: absolute;
@@ -681,3 +526,122 @@ code {
     color: #9b9b9b;
     content: "All icons courtesy of Freepik";
 }
+
+
+
+
+/* ----------------------------------- Wide display styling  ----------------------------------------- */
+
+/* Start min-width: 769px */
+@media (min-width: 769px) {
+    .navbar .nav {
+        position: absolute; 
+        left: auto; 
+        bottom: 0; 
+        margin-right: 0; 
+} 
+
+/* Next two sections control styling of logo */
+.navbar .brand img {
+    border: none;
+    max-width: 400px;
+    margin: -1px;
+    overflow: hidden;
+    padding: 0;
+    position: absolute;
+    width: auto;
+}
+    
+#mainNav .brand span {
+	display: inline-block;
+	text-indent: -9000px;
+	width: 381px;
+	height: 75px;
+	background: url(https://ericrjensen.github.io/CE-Support/logo.png) no-repeat 0 0;
+	background-size: 100%;
+}    
+
+.navbar .brand {
+    height: 32px;
+    width: 326px;
+    margin: 15px 0;
+    padding: 0;
+    background-size: 100%;
+    background-repeat: no-repeat;
+}
+
+#searchBar .search-query {
+    border-radius: 3px;
+    font-size: 16px;
+    line-height: 1;
+    width: 100%;
+    height: 40px;
+    color: #3e4245;
+    border: 0;
+}
+
+#searchBar .search-query::placeholder {
+    color: #DADEE1;
+}
+
+#searchBar .search-query:focus {
+    box-shadow: 0 0 0 2px #519bf7;
+}
+
+#searchBar button {
+    color: #fff;
+    text-shadow: none;
+    background: #519bf7;
+    border-radius: 0 3px 3px 0;
+    border: 0;
+    font-size: 16px;
+    padding: 0.7em 1.5em;
+    height: 40px;
+    right: 0;
+}
+
+#searchBar button:hover {
+    background: #1769e6;
+}
+
+#searchBar button .icon-search {
+    display: inline;
+    padding-right: 10px;
+    font-size: 16px;
+    color: #fff;
+}
+
+#serp-dd {
+    top: 65px;
+    border: 1px solid #EDEDED;
+    box-shadow: 0 5px 3px rgba(0, 0, 0, .08);
+    border-radius: 3px;
+}
+
+#serp-dd .result>li {
+    padding: 5px;
+}
+}
+/* End min-width: 769px */
+
+
+/* ------------------------------------- Narrow screen  ------------------------------------------- */
+
+
+@media screen and (max-width: 620px) {
+    .category-list .category {
+        flex: 2 2 50%;
+        width: 45%;
+        text-align: center;
+    }
+}
+
+@media screen and (max-width: 450px) {
+    .category-list .category {
+        flex: 1 1 100%;
+        width: 100%;
+        text-align: center;
+    }
+}
+
+
